==> WfHit/wheel_loader/platforms/nuttx/src/px4/nxp/imxrt/io_pins/io_timer.c <==
#include <px4_platform_common/px4_config.h>
#include <systemlib/px4_macros.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <sys/types.h>
#include <stdbool.h>
#include <assert.h>
#include <debug.h>
#include <time.h>
#include <queue.h>
#include <errno.h>
#include <string.h>
#include <stdio.h>
#include <arch/board/board.h>
#include <drivers/drv_pwm_output.h>
#include <px4_arch/io_timer.h>
#include <chip.h>
#include "hardware/imxrt_flexpwm.h"
#include "imxrt_periphclks.h"
#define BOARD_PWM_FREQ 1000000
#define BOARD_ONESHOT_FREQ 8000000
#define FLEXPWM_SRC_CLOCK_FREQ 16000000
#define MAX_CHANNELS_PER_TIMER 2
#define SM_SPACING (IMXRT_FLEXPWM_SM1CNT_OFFSET-IMXRT_FLEXPWM_SM0CNT_OFFSET)
#define _REG(_addr)	(*(volatile uint16_t *)(_addr))
#define _REG16(_base, _reg)	(*(volatile uint16_t *)(_base + _reg))
#define REG(_tmr, _sm, _reg)		_REG16(io_timers[(_tmr)].base + ((_sm) * SM_SPACING), (_reg))
#define rCNT(_tim, _sm)        REG(_tim, _sm,IMXRT_FLEXPWM_SM0CNT_OFFSET)        /* Counter Register */
#define rINIT(_tim, _sm)       REG(_tim, _sm,IMXRT_FLEXPWM_SM0INIT_OFFSET)       /* Initial Count Register */
#define rCTRL2(_tim, _sm)      REG(_tim, _sm,IMXRT_FLEXPWM_SM0CTRL2_OFFSET)      /* Control 2 Register */
#define rCTRL(_tim, _sm)       REG(_tim, _sm,IMXRT_FLEXPWM_SM0CTRL_OFFSET)       /* Control Register */
#define rVAL0(_tim, _sm)       REG(_tim, _sm,IMXRT_FLEXPWM_SM0VAL0_OFFSET)       /* Value Register 0 */

uint32_t io_timer_channel_get_gpio_output(unsigned channel)
{
	if (io_timer_validate_channel_index(channel) != 0) {
		return 0;
	}

	return timer_io_channels[channel].gpio_portpin | (GPIO_OUTPUT | GPIO_OUTPUT_ZERO | IOMUX_CMOS_OUTPUT | IOMUX_PULL_KEEP
			| IOMUX_SLEW_FAST);
	return 0;
}

static inline void io_timer_set_oneshot_mode(unsigned timer)
{
	int channels = get_timer_channels(timer);

	irqstate_t flags = px4_enter_critical_section();

	for (uint32_t channel = 0; channel < DIRECT_PWM_OUTPUT_CHANNELS; ++channel) {
		if ((1 << channel) & channels) {
			uint16_t rvalue = rCTRL(channels_timer(channel), timer_io_channels[channel].sub_module);
			rvalue &= ~SMCTRL_PRSC_MASK;
			rvalue |= SMCTRL_PRSC_DIV2 | SMCTRL_LDMOD;
			rMCTRL(channels_timer(channel)) |= (timer_io_channels[channel].sub_module_bits >> MCTRL_LDOK_SHIFT) << MCTRL_CLDOK_SHIFT
							   ;
			rCTRL(channels_timer(channel), timer_io_channels[channel].sub_module)  = rvalue;
			rMCTRL(channels_timer(channel)) |= timer_io_channels[channel].sub_module_bits;
		}
	}

	px4_leave_critical_section(flags);

}

static inline void io_timer_set_PWM_mode(unsigned timer)
{
	int channels = get_timer_channels(timer);

	irqstate_t flags = px4_enter_critical_section();

	for (uint32_t channel = 0; channel < DIRECT_PWM_OUTPUT_CHANNELS; ++channel) {
		if ((1 << channel) & channels) {
			uint16_t rvalue = rCTRL(channels_timer(channel), timer_io_channels[channel].sub_module);
			rvalue &= ~(SMCTRL_PRSC_MASK | SMCTRL_LDMOD);
			rvalue |= SMCTRL_PRSC_DIV16;
			rMCTRL(channels_timer(channel)) |= (timer_io_channels[channel].sub_module_bits >> MCTRL_LDOK_SHIFT) << MCTRL_CLDOK_SHIFT
							   ;
			rCTRL(channels_timer(channel), timer_io_channels[channel].sub_module)  = rvalue;
			rMCTRL(channels_timer(channel)) |= timer_io_channels[channel].sub_module_bits;
		}
	}

	px4_leave_critical_section(flags);
}

void io_timer_trigger(unsigned channel_mask)
{
	// Any Channels in oneshot?

	int oneshots = io_timer_get_mode_channels(IOTimerChanMode_OneShot) & channel_mask;

	// Yes do triggering
	if (oneshots) {
		struct {
			uint32_t base;
			uint16_t triggers;
		} action_cache[MAX_IO_TIMERS] = {0};

		int actions = 0;

		// Get the Timer modules addresses
		for (int timer = 0; timer < MAX_IO_TIMERS && io_timers[timer].base != 0; timer++) {
			if (action_cache[actions].base == 0) {
				action_cache[actions].base = io_timers[timer].base;

			} else if (action_cache[actions].base != io_timers[timer].base) {
				actions++;
				action_cache[actions].base = io_timers[timer].base;
			}
		}


		/* Pre-calculate the list of channels to Trigger for each Timer module */

		int mask;
		uint32_t channel = 0;

		for (actions = 0; actions < MAX_IO_TIMERS; actions++) {
			if (action_cache[actions].base == 0) {
				// All have been processed
				break;
			}

			// Group the bits from channels on the same timer
			for (; channel < MAX_TIMER_IO_CHANNELS && timer_io_channels[channel].val_offset;  channel++) {

				if (io_timers[timer_io_channels[channel].timer_index].base != action_cache[actions].base) {
					break;
				}

				mask = get_channel_mask(channel);

				if (oneshots & mask) {
					action_cache[actions].triggers |= timer_io_channels[channel].sub_module_bits;
				}
			}
		}

		/* Now do them all with the shortest delay in between */

		irqstate_t flags = px4_enter_critical_section();

		for (actions = 0; action_cache[actions].base != 0 &&  actions < MAX_IO_TIMERS; actions++) {
			_REG16(action_cache[actions].base, IMXRT_FLEXPWM_MCTRL_OFFSET) |= (action_cache[actions].triggers >> MCTRL_LDOK_SHIFT)
					<< MCTRL_CLDOK_SHIFT ;
			_REG16(action_cache[actions].base, IMXRT_FLEXPWM_MCTRL_OFFSET) |= action_cache[actions].triggers;
		}

		px4_leave_critical_section(flags);
	}
}

int io_timer_init_timer(unsigned timer, io_timer_channel_mode_t mode)
{
	if (validate_timer_index(timer) != 0) {
		return -EINVAL;
	}

	io_timer_channel_mode_t previous_mode = timer_allocations_mask[timer];
	int rv = io_timer_allocate_timer(timer, mode);

	/* Do this only once per timer */
	if (rv == 0 && previous_mode == IOTimerChanMode_NotUsed) {

		irqstate_t flags = px4_enter_critical_section();

		/* enable the timer clock before we try to talk to it */

		switch (io_timers[timer].base) {
		case IMXRT_FLEXPWM1_BASE:
			imxrt_clockall_pwm1();
			break;

		case IMXRT_FLEXPWM2_BASE:
			imxrt_clockall_pwm2();
			break;

		case IMXRT_FLEXPWM3_BASE:
			imxrt_clockall_pwm3();
			break;

		case IMXRT_FLEXPWM4_BASE:
			imxrt_clockall_pwm4();
			break;
		}

		int channels = get_timer_channels(timer);

		for (uint32_t chan = 0; chan < DIRECT_PWM_OUTPUT_CHANNELS; ++chan) {
			if ((1 << chan) & channels) {

				/* Clear all Faults */
				rFSTS0(timer) = FSTS_FFLAG_MASK;

				rCTRL2(timer, timer_io_channels[chan].sub_module) = SMCTRL2_CLK_SEL_EXT_CLK | SMCTRL2_DBGEN | SMCTRL2_INDEP;
				rCTRL(timer, timer_io_channels[chan].sub_module)  = SMCTRL_PRSC_DIV16 | SMCTRL_FULL;
				/* Edge aligned at 0 */
				rINIT(channels_timer(chan), timer_io_channels[chan].sub_module) = 0;
				rVAL0(channels_timer(chan), timer_io_channels[chan].sub_module) = 0;
				rVAL2(channels_timer(chan), timer_io_channels[chan].sub_module) = 0;
				rVAL4(channels_timer(chan), timer_io_channels[chan].sub_module) = 0;
				rFFILT0(timer) &= ~FFILT_FILT_PER_MASK;
				rDISMAP0(timer, timer_io_channels[chan].sub_module) = 0xf000;
				rDISMAP1(timer, timer_io_channels[chan].sub_module) = 0xf000;
				rOUTEN(timer) |= timer_io_channels[chan].val_offset == PWMA_VAL ? OUTEN_PWMA_EN(1 << timer_io_channels[chan].sub_module)
						 : OUTEN_PWMB_EN(1 << timer_io_channels[chan].sub_module);
				rDTSRCSEL(timer) = 0;
				rMCTRL(timer) = MCTRL_LDOK(1 << timer_io_channels[chan].sub_module);
				rMCTRL(timer) = timer_io_channels[chan].sub_module_bits;
			}
		}

		io_timer_set_PWM_mode(timer);
		timer_set_rate(timer, 50);

		px4_leave_critical_section(flags);
	}

	return rv;
}

int io_timer_channel_init(unsigned channel, io_timer_channel_mode_t mode,
			  channel_handler_t channel_handler, void *context)
{
	if (io_timer_validate_channel_index(channel) != 0) {
		return -EINVAL;
	}

	uint32_t gpio = 0;

	/* figure out the GPIO config first */

	switch (mode) {

	case IOTimerChanMode_OneShot:
	case IOTimerChanMode_PWMOut:
	case IOTimerChanMode_Trigger:
		gpio = timer_io_channels[channel].gpio_out;
		break;

	case IOTimerChanMode_PWMIn:
	case IOTimerChanMode_Capture:
		return -EINVAL;
		break;

	case IOTimerChanMode_NotUsed:
		break;

	default:
		return -EINVAL;
	}

	irqstate_t flags = px4_enter_critical_section(); // atomic channel allocation and hw config

	int previous_mode = io_timer_get_channel_mode(channel);
	int rv = allocate_channel(channel, mode);
	unsigned timer = channels_timer(channel);

	if (rv == 0) {
		/* Try to reserve & initialize the timer - it will only do it once */

		rv = io_timer_init_timer(timer, mode);

		if (rv != 0 && previous_mode == IOTimerChanMode_NotUsed) {
			/* free the channel if it was not used before */
			io_timer_unallocate_channel(channel);
		}
	}

	/* Valid channel should now be reserved in new mode */

	if (rv == 0) {

		/* Set up IO */
		if (gpio) {
			px4_arch_configgpio(gpio);
		}

		/* configure the channel */

		REG(timer, 0, IMXRT_FLEXPWM_MCTRL_OFFSET) |=  MCTRL_RUN(1 << timer_io_channels[channel].sub_module);

		channel_handlers[channel].callback = channel_handler;
		channel_handlers[channel].context = context;
	}

	px4_leave_critical_section(flags);

	return rv;
}

int io_timer_set_enable(bool state, io_timer_channel_mode_t mode, io_timer_channel_allocation_t masks)
{
	switch (mode) {
	case IOTimerChanMode_NotUsed:
	case IOTimerChanMode_PWMOut:
	case IOTimerChanMode_OneShot:
	case IOTimerChanMode_Trigger:
		break;

	case IOTimerChanMode_PWMIn:
	case IOTimerChanMode_Capture:
	default:
		return -EINVAL;
	}

	/* Was the request for all channels in this mode ?*/

	if (masks == IO_TIMER_ALL_MODES_CHANNELS) {

		/* Yes - we provide them */

		masks = channel_allocations_mask[mode];

	} else {

		/* No - caller provided mask */

		/* Only allow the channels in that mode to be affected */

		masks &= channel_allocations_mask[mode];

	}

	if (masks) {
		struct {
			uint32_t sm_ens;
			uint32_t base;
			uint32_t io_index;
			uint32_t gpios[MAX_TIMER_IO_CHANNELS];
		} action_cache[MAX_IO_TIMERS];

		unsigned int actions = 0;
		memset(action_cache, 0, sizeof(action_cache));

		for (int timer = 0; timer < MAX_IO_TIMERS && io_timers[timer].base != 0; timer++) {
			if (action_cache[actions].base == 0) {
				action_cache[actions].base = io_timers[timer].base;

			} else if (action_cache[actions].base != io_timers[timer].base) {
				actions++;
				action_cache[actions].base = io_timers[timer].base;
			}
		}

		int chan_index = 0;

		for (actions = 0; actions < MAX_IO_TIMERS; actions++) {
			if (action_cache[actions].base == 0) {
				// All have been processed
				break;
			}

			for (; masks != 0 && chan_index < MAX_TIMER_IO_CHANNELS && timer_io_channels[chan_index].val_offset; chan_index++) {

				if (masks & (1 << chan_index)) {

					if (io_timers[timer_io_channels[chan_index].timer_index].base != action_cache[actions].base) {
						break;
					}

					masks &= ~(1 << chan_index);

					action_cache[actions].sm_ens |= MCTRL_RUN(1 << timer_io_channels[chan_index].sub_module) |
									timer_io_channels[chan_index].sub_module_bits;
					action_cache[actions].gpios[action_cache[actions].io_index++] = timer_io_channels[chan_index].gpio_out;
				}
			}
		}

		irqstate_t flags = px4_enter_critical_section();

		for (actions = 0; actions < arraySize(action_cache); actions++) {
			if (action_cache[actions].base == 0) {
				break;
			}

			for (unsigned int index = 0; index < action_cache[actions].io_index; index++) {
				if (action_cache[actions].gpios[index]) {
					px4_arch_configgpio(action_cache[actions].gpios[index]);
				}
			}

			_REG16(action_cache[actions].base, IMXRT_FLEXPWM_MCTRL_OFFSET) = action_cache[actions].sm_ens;
		}

		px4_leave_critical_section(flags);
	}

	return 0;
}

int io_timer_set_ccr(unsigned channel, uint16_t value)
{
	int rv = io_timer_validate_channel_index(channel);
	int mode = io_timer_get_channel_mode(channel);

	if (rv == 0) {
		if ((mode != IOTimerChanMode_PWMOut) &&
		    (mode != IOTimerChanMode_OneShot) &&
		    (mode != IOTimerChanMode_Trigger)) {

			rv = -EIO;

		} else {
			irqstate_t flags = px4_enter_critical_section();
			rMCTRL(channels_timer(channel)) |= (timer_io_channels[channel].sub_module_bits >> MCTRL_LDOK_SHIFT) << MCTRL_CLDOK_SHIFT
							   ;
			REG(channels_timer(channel), timer_io_channels[channel].sub_module, timer_io_channels[channel].val_offset) = value - 1;
			rMCTRL(channels_timer(channel)) |= timer_io_channels[channel].sub_module_bits;
			px4_leave_critical_section(flags);
		}
	}

	return rv;
}

uint16_t io_channel_get_ccr(unsigned channel)
{
	uint16_t value = 0;

	if (io_timer_validate_channel_index(channel) == 0) {
		int mode = io_timer_get_channel_mode(channel);

		if ((mode == IOTimerChanMode_PWMOut) ||
		    (mode == IOTimerChanMode_OneShot) ||
		    (mode == IOTimerChanMode_Trigger)) {
			value = REG(channels_timer(channel), timer_io_channels[channel].sub_module, timer_io_channels[channel].val_offset) + 1;
		}
	}

	return value;
}
